adjusted language and layout

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <li><a href="media.html" class="nav__link">Media</a></li>
                     <li><a href="contact.html" class="nav__link">Contact</a></li>
                     <li class="nav__cta">
-                        <a href="contact.html#schedule" class="btn btn--secondary">Book Session</a>
+                        <a href="contact.html#contact-form" class="btn btn--secondary">Book Session</a>
                     </li>
                 </ul>
 
@@ -85,8 +85,8 @@
                 <div class="about-preview__content slide-in-right">
                     <h2>About Jacob Sadan</h2>
                     <p>
-                        As a licensed psychotherapist with extensive training in Intensive Short-Term Dynamic
-                        Psychotherapy (ISTDP), I bring both clinical expertise and genuine compassion to every
+                        As an associate psychotherapist and life coach with extensive training in Intensive Short-Term
+                        Dynamic Psychotherapy (ISTDP), I bring both clinical expertise and genuine compassion to every
                         therapeutic relationship.
                     </p>
                     <p>
@@ -243,7 +243,8 @@
                     Whether you're curious about ISTDP, interested in faith-integrated therapy, or simply
                     looking for compassionate support, I'd love to hear from you.
                 </p>
-                <a href="contact.html#schedule" class="btn btn--cta">Schedule Your First Appointment</a>
+                <a href="contact.html#contact-form" class="btn btn--cta">Schedule
+                    Your First Appointment</a>
             </div>
         </div>
     </section>
@@ -256,7 +257,7 @@
                     <h3>Jacob Sadan</h3>
                     <p>"Real Therapy for Real Life"</p>
                     <p style="margin-top: var(--space-md);">
-                        Licensed Psychotherapist specializing in ISTDP and faith-integrated therapy.
+                        Associate Therapist
                     </p>
                 </div>
 
@@ -282,14 +283,15 @@
                 <div>
                     <h4 class="footer__title">Connect</h4>
                     <ul class="footer__links">
-                        <li><a href="contact.html#schedule">Book Appointment</a></li>
+                        <li><a href="contact.html#contact-form">Book
+                                Appointment</a></li>
                         <li><a href="contact.html">Get in Touch</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="footer__bottom">
-                <p>&copy; 2025 Jacob Sadan. All rights reserved.</p>
+                <p>&copy; 2026 Jacob Sadan. All rights reserved.</p>
             </div>
         </div>
     </footer>
