--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
           <li><a href="media.html" class="nav__link">Media</a></li>
           <li><a href="contact.html" class="nav__link">Contact</a></li>
           <li class="nav__cta">
-            <a href="contact.html#schedule" class="btn btn--secondary">Book Session</a>
+            <a href="contact.html#contact-form" class="btn btn--secondary">Book
+              Session</a>
           </li>
         </ul>
 
@@ -122,15 +123,15 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero__content">
-      <span class="hero__tagline">Licensed Psychotherapist</span>
+      <span class="hero__tagline">Associate Therapist</span>
       <h1 class="hero__title">Jacob Sadan</h1>
       <p class="hero__catchphrase">"Real Therapy for Real Life"</p>
       <p class="hero__description">
-        Compassionate, evidence-based therapy integrating ISTDP and Orthodox Christian principles
-        to help you find healing, meaning, and authentic transformation.
+        Compassionate, evidence-based therapy focused on deep emotional work and real-life change.
       </p>
       <div class="hero__cta">
-        <a href="contact.html#schedule" class="btn btn--cta">Schedule Your First Appointment</a>
+        <a href="contact.html#contact-form" class="btn btn--cta">Schedule Your
+          First Appointment</a>
       </div>
     </div>
     <a href="#welcome" class="hero__scroll" aria-label="Scroll down">
@@ -148,10 +149,10 @@
           <img src="jsadan.jpeg" alt="Jacob Sadan - Licensed Psychotherapist" class="about-preview__img">
         </div>
         <div class="about-preview__content slide-in-right">
-          <h2>Therapy That Gets to the Heart of the Matter</h2>
+          <h2>Lasting Change That Gets to the Heart of the Matter</h2>
           <p>
-            I'm Jacob Sadan, a licensed psychotherapist dedicated to helping individuals navigate life's
-            challenges with courage and clarity. My practice is built on the belief that true healing
+            I'm Jacob Sadan, an associate marriage and family therapist and life coach dedicated to helping individuals
+            navigate life's challenges with courage and clarity. My practice is built on the belief that true healing
             happens when we address not just symptoms, but the whole person: mind, heart, and spirit.
           </p>
           <p>
@@ -238,7 +239,7 @@
             Working with Jacob has been transformative. His approach helped me understand patterns
             I'd been stuck in for years. For the first time, I feel like real change is possible.
           </p>
-          <p class="testimonial-card__author">— Sarah M.</p>
+          <p class="testimonial-card__author">— Leah M.</p>
           <p class="testimonial-card__detail">Anxiety & Relationship Issues</p>
         </div>
 
@@ -279,7 +280,8 @@
           Taking the first step toward healing takes courage. I'm here to help you
           navigate that journey with compassion and expertise.
         </p>
-        <a href="contact.html#schedule" class="btn btn--cta">Schedule Your First Appointment</a>
+        <a href="contact.html#contact-form" class="btn btn--cta">Schedule Your
+          First Appointment</a>
       </div>
     </div>
   </section>
@@ -292,7 +294,7 @@
           <h3>Jacob Sadan</h3>
           <p>"Real Therapy for Real Life"</p>
           <p style="margin-top: var(--space-md);">
-            Licensed Psychotherapist specializing in ISTDP and faith-integrated therapy.
+            Associate Therapist
           </p>
         </div>
 
@@ -318,14 +320,14 @@
         <div>
           <h4 class="footer__title">Connect</h4>
           <ul class="footer__links">
-            <li><a href="contact.html#schedule">Book Appointment</a></li>
+            <li><a href="contact.html#contact-form">Book Appointment</a></li>
             <li><a href="contact.html">Get in Touch</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer__bottom">
-        <p>&copy; 2025 Jacob Sadan. All rights reserved.</p>
+        <p>&copy; 2026 Jacob Sadan. All rights reserved.</p>
       </div>
     </div>
   </footer>
