change seo site from github to domain

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <title>Jacob Sadan | Therapist in San Diego, CA | Real Therapy for Real Life</title>
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://jacob-wahbeh.github.io/Therapist_website/">
+  <link rel="canonical" href="https://jacobsadan.com/">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://jacob-wahbeh.github.io/Therapist_website/">
+  <meta property="og:url" content="https://jacobsadan.com/">
   <meta property="og:title" content="Jacob Sadan | Therapist in San Diego, CA">
   <meta property="og:description"
     content="Licensed Therapist specializing in ISTDP and faith-integrated psychotherapy. Real Therapy for Real Life.">
-  <meta property="og:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
+  <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
   <meta property="og:locale" content="en_US">
 
   <!-- Twitter -->
@@ -27,7 +27,7 @@
   <meta name="twitter:title" content="Jacob Sadan | Therapist in San Diego, CA">
   <meta name="twitter:description"
     content="Licensed Therapist specializing in ISTDP and faith-integrated psychotherapy. Real Therapy for Real Life.">
-  <meta name="twitter:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
+  <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
 
   <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
@@ -36,8 +36,8 @@
     "@type": "Psychologist",
     "name": "Jacob Sadan",
     "description": "Licensed Psychotherapist specializing in ISTDP and faith-integrated therapy",
-    "url": "https://jacob-wahbeh.github.io/Therapist_website",
-    "image": "https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg",
+    "url": "https://jacobsadan.com",
+    "image": "https://jacobsadan.com/jsadan.jpeg",
     "telephone": "(123) 456-7890",
     "address": {
       "@type": "PostalAddress",
