--- a/media.html
+++ b/media.html
@@ -11,22 +11,22 @@
     <title>Media Appearances | Jacob Sadan - Therapist in San Diego, CA</title>
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://jacob-wahbeh.github.io/Therapist_website/media.html">
+    <link rel="canonical" href="https://jacobsadan.com/media.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jacob-wahbeh.github.io/Therapist_website/media.html">
+    <meta property="og:url" content="https://jacobsadan.com/media.html">
     <meta property="og:title" content="Media Appearances | Jacob Sadan - San Diego Therapist">
     <meta property="og:description"
         content="Watch Jacob Sadan's media appearances discussing mental health, therapy, and faith.">
-    <meta property="og:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
+    <meta property="og:image" content="https://jacobsadan.com/jsadan.jpeg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Media Appearances | Jacob Sadan - San Diego Therapist">
     <meta name="twitter:description"
         content="Watch Jacob Sadan's media appearances discussing mental health, therapy, and faith.">
-    <meta name="twitter:image" content="https://jacob-wahbeh.github.io/Therapist_website/jsadan.jpeg">
+    <meta name="twitter:image" content="https://jacobsadan.com/jsadan.jpeg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
