changed language from gdoc & life coach

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                     <h2>ISTDP: Intensive Short-Term Dynamic Psychotherapy</h2>
                     <p>
                         ISTDP is a powerful, evidence-based form of psychotherapy that focuses on helping
-                        you access and experience emotions that have been buried or avoided, often since childhood.
+                        you access and experience emotions that have been buried or avoided, often since early life.
                         Unlike traditional talk therapy that can take years, ISTDP is designed to create
                         meaningful change in a shorter timeframe.
                     </p>
@@ -214,7 +214,7 @@
     <section class="section section--white">
         <div class="container">
             <div class="text-center fade-in" style="max-width: 800px; margin: 0 auto;">
-                <h2>My Therapeutic Philosophy</h2>
+                <h2>My Philosophy</h2>
                 <p style="font-size: var(--text-lg); color: var(--color-text-light); margin-top: var(--space-lg);">
                     I believe that every person has an innate capacity for healing and growth. My role is not
                     to fix you, because you are not broken. Rather, it is to create conditions where you can access
@@ -257,7 +257,7 @@
                     <h3>Jacob Sadan</h3>
                     <p>"Real Therapy for Real Life"</p>
                     <p style="margin-top: var(--space-md);">
-                        Associate Therapist
+                        Therapist & Life Coach
                     </p>
                 </div>
 
