--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Psychologist",
+    "@type": "Person",
+    "jobTitle": "Therapist and Life Coach",
     "name": "Jacob Sadan",
     "description": "Licensed Psychotherapist specializing in ISTDP and faith-integrated therapy",
     "url": "https://jacobsadan.com",
@@ -123,7 +124,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero__content">
-      <span class="hero__tagline">Associate Therapist</span>
+      <span class="hero__tagline">Therapist & Life Coach</span>
       <h1 class="hero__title">Jacob Sadan</h1>
       <p class="hero__catchphrase">"Real Therapy for Real Life"</p>
       <p class="hero__description">
@@ -199,8 +200,8 @@
           </div>
           <h4 class="method-card__title">Faith-Integrated Therapy</h4>
           <p class="card__text">
-            For those who desire it, therapy that honors and incorporates Orthodox Christian
-            spirituality, connecting psychological healing with your faith journey.
+            For those who desire it, therapy that honors and incorporates faith and spirituality, connecting
+            psychological healing with your faith journey.
           </p>
         </div>
 
@@ -237,9 +238,9 @@
         <div class="testimonial-card fade-in">
           <p class="testimonial-card__quote">
             Working with Jacob has been transformative. His approach helped me understand patterns
-            I'd been stuck in for years. For the first time, I feel like real change is possible.
+            I'd been stuck in for years.
           </p>
-          <p class="testimonial-card__author">— Leah M.</p>
+          <p class="testimonial-card__author">— Former Client</p>
           <p class="testimonial-card__detail">Anxiety & Relationship Issues</p>
         </div>
 
@@ -248,7 +249,7 @@
             I was skeptical about therapy, but Jacob's direct yet compassionate approach made all
             the difference. He does not just listen. He helps you actually work through things.
           </p>
-          <p class="testimonial-card__author">— Michael T.</p>
+          <p class="testimonial-card__author">— Former Client</p>
           <p class="testimonial-card__detail">Depression & Life Transitions</p>
         </div>
 
@@ -257,7 +258,7 @@
             The integration of faith into therapy was exactly what I needed. Jacob respects where
             you are spiritually while providing excellent clinical care.
           </p>
-          <p class="testimonial-card__author">— Anna K.</p>
+          <p class="testimonial-card__author">— Former Client</p>
           <p class="testimonial-card__detail">Faith-Integrated Therapy</p>
         </div>
       </div>
@@ -294,7 +295,7 @@
           <h3>Jacob Sadan</h3>
           <p>"Real Therapy for Real Life"</p>
           <p style="margin-top: var(--space-md);">
-            Associate Therapist
+            Therapist & Life Coach
           </p>
         </div>
 
