--- a/media.html
+++ b/media.html
@@ -424,7 +424,7 @@
                     <h3>Jacob Sadan</h3>
                     <p>"Real Therapy for Real Life"</p>
                     <p style="margin-top: var(--space-md);">
-                        Associate Therapist
+                        Therapist & Life Coach
                     </p>
                 </div>
 
