--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <h1 class="hero__title">Jacob Sadan</h1>
       <p class="hero__catchphrase">"Real Therapy for Real Life"</p>
       <p class="hero__description">
-        Compassionate, evidence-based therapy focused on deep emotional work and real-life change.
+        Compassionate, evidence-based therapy focusing on deep emotional work and real-life change.
       </p>
       <div class="hero__cta">
         <a href="contact.html#contact-form" class="btn btn--cta">Schedule Your
@@ -152,7 +152,7 @@
         <div class="about-preview__content slide-in-right">
           <h2>Lasting Change That Gets to the Heart of the Matter</h2>
           <p>
-            I'm Jacob Sadan, an associate marriage and family therapist and life coach dedicated to helping individuals
+            I'm Jacob Sadan, a marriage and family therapist and life coach dedicated to helping individuals
             navigate life's challenges with courage and clarity. My practice is built on the belief that true healing
             happens when we address not just symptoms, but the whole person: mind, heart, and spirit.
           </p>
