--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="about-preview__content slide-in-right">
           <h2>Lasting Change That Gets to the Heart of the Matter</h2>
           <p>
-            I'm Jacob Sadan, a marriage and family therapist and life coach dedicated to helping individuals
+            I'm Jacob Sadan, a Marriage and Family Therapist and Life Coach dedicated to helping individuals
             navigate life's challenges with courage and clarity. My practice is built on the belief that true healing
             happens when we address not just symptoms, but the whole person: mind, heart, and spirit.
           </p>
