--- a/media.html
+++ b/media.html
@@ -350,31 +350,11 @@
                 </div>
 
                 <!-- Podcasts Grid -->
-                <div
-                    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: var(--space-xl); margin-top: var(--space-xl); align-items: start;">
-
-                    <!-- YouTube Podcast -->
-                    <div
-                        style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md);">
-                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                            <iframe src="https://www.youtube.com/embed/oxJ03h81-jk"
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
-                                frameborder="0" allowfullscreen
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share">
-                            </iframe>
-                        </div>
-                        <div style="padding: var(--space-lg);">
-                            <p
-                                style="font-size: var(--text-sm); color: var(--color-primary); font-weight: 600; margin-bottom: var(--space-xs);">
-                                The Christian G Podcast</p>
-                            <h4 style="margin-bottom: var(--space-sm);">The Sin Episode</h4>
-                            <p style="font-size: var(--text-sm); color: var(--color-text-muted);">YouTube</p>
-                        </div>
-                    </div>
+                <div style="display: flex; justify-content: center; margin-top: var(--space-xl);">
 
                     <!-- KPBS Instagram Interview -->
                     <div
-                        style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md);">
+                        style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md); max-width: 500px; width: 100%;">
                         <blockquote class="instagram-media"
                             data-instgrm-permalink="https://www.instagram.com/reel/DSaf9uqiT1G/"
                             data-instgrm-version="14"
