--- a/media.html
+++ b/media.html
@@ -283,16 +283,57 @@
                     <p class="text-muted">Featured discussions on mental health topics with San Diego news stations</p>
                 </div>
 
-                <!-- TV News Grid (2 videos side by side) -->
+                <!-- TV News Grid -->
                 <div
                     style="display: grid; grid-template-columns: repeat(2, 1fr); gap: var(--space-xl); margin-top: var(--space-xl);">
 
-                    <!-- FOX 5 Mental Health Interview -->
+                    <!-- Video 1: Grief Awareness -->
                     <div
                         style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md);">
                         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
                             <iframe
-                                src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fsharpmesavista%2Fvideos%2F1381409376975729%2F&show_text=false&width=560&t=0"
+                                src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Ffb.watch%2FEA6Gh-1KiF%2F&show_text=false&width=560&t=0"
+                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
+                                scrolling="no" frameborder="0" allowfullscreen="true"
+                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                            </iframe>
+                        </div>
+                        <div style="padding: var(--space-lg);">
+                            <p
+                                style="font-size: var(--text-sm); color: var(--color-primary); font-weight: 600; margin-bottom: var(--space-xs);">
+                                KUSI News</p>
+                            <h4 style="margin-bottom: var(--space-sm);">Identifying and Coping with Grief</h4>
+                            <p style="font-size: var(--text-sm); color: var(--color-text-muted);">Grief Awareness Day
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Video 2: New Year's Resolutions -->
+                    <div
+                        style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md);">
+                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                            <iframe
+                                src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Ffb.watch%2FEA6HLYH-Yi%2F&show_text=false&width=560&t=0"
+                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
+                                scrolling="no" frameborder="0" allowfullscreen="true"
+                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                            </iframe>
+                        </div>
+                        <div style="padding: var(--space-lg);">
+                            <p
+                                style="font-size: var(--text-sm); color: var(--color-primary); font-weight: 600; margin-bottom: var(--space-xs);">
+                                KUSI News</p>
+                            <h4 style="margin-bottom: var(--space-sm);">Making and Keeping New Year's Resolutions</h4>
+                            <p style="font-size: var(--text-sm); color: var(--color-text-muted);">New Year's Goals</p>
+                        </div>
+                    </div>
+
+                    <!-- Video 3: Mental Illness Awareness -->
+                    <div
+                        style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md);">
+                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                            <iframe
+                                src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Ffb.watch%2FEA6JyEptWR%2F&show_text=false&width=560&t=0"
                                 style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
                                 scrolling="no" frameborder="0" allowfullscreen="true"
                                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
@@ -308,26 +349,55 @@
                         </div>
                     </div>
 
-                    <!-- KUSI News Grief Interview -->
-                    <div
-                        style="background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md);">
-                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                            <iframe
-                                src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fsharpmesavista%2Fvideos%2F1346899470197511%2F&show_text=false&width=560&t=0"
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
-                                scrolling="no" frameborder="0" allowfullscreen="true"
-                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
-                            </iframe>
+                </div>
+            </div>
+
+            <!-- Articles Section -->
+            <div class="media-section fade-in" style="margin-top: var(--space-3xl);">
+                <div class="media-section__header">
+                    <div class="media-section__title">
+                        <div class="media-section__icon"
+                            style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z" />
+                            </svg>
                         </div>
-                        <div style="padding: var(--space-lg);">
-                            <p
-                                style="font-size: var(--text-sm); color: var(--color-primary); font-weight: 600; margin-bottom: var(--space-xs);">
-                                KUSI News</p>
-                            <h4 style="margin-bottom: var(--space-sm);">Understanding and Coping with Grief</h4>
-                            <p style="font-size: var(--text-sm); color: var(--color-text-muted);">Grief Awareness Day
-                            </p>
-                        </div>
+                        <h2>Articles & Publications</h2>
                     </div>
+                    <p class="text-muted">Featured written content on mental health and wellness</p>
+                </div>
+
+                <!-- Articles Grid -->
+                <div
+                    style="display: grid; grid-template-columns: 1fr; gap: var(--space-xl); margin-top: var(--space-xl); max-width: 700px;">
+
+                    <!-- Sharp Health News Article -->
+                    <a href="https://www.sharp.com/health-news/addressing-the-epidemic-of-loneliness" target="_blank"
+                        rel="noopener noreferrer"
+                        style="display: block; background: var(--color-white); border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-md); transition: all var(--transition-base); text-decoration: none; color: inherit;">
+                        <div style="padding: var(--space-xl);">
+                            <p
+                                style="font-size: var(--text-sm); color: var(--color-primary); font-weight: 600; margin-bottom: var(--space-sm);">
+                                Sharp Health News</p>
+                            <h3 style="margin-bottom: var(--space-md); color: var(--color-text);">Addressing the
+                                'Epidemic' of Loneliness</h3>
+                            <p style="color: var(--color-text-light); margin-bottom: var(--space-lg);">
+                                Some ways to feel less lonely include reducing social media use, participating in
+                                community groups, or practicing gratitude.
+                            </p>
+                            <span
+                                style="display: inline-flex; align-items: center; gap: var(--space-sm); color: var(--color-primary); font-weight: 500; font-size: var(--text-sm);">
+                                Read Article
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                                </svg>
+                            </span>
+                        </div>
+                    </a>
 
                 </div>
             </div>
