--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
         content="ISTDP San Diego, intensive short-term dynamic psychotherapy California, Orthodox Christian therapy, faith-based counseling San Diego">
     <title>About & Method | Jacob Sadan - Therapist in San Diego, CA</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://jacobsadan.com/about.html">
