--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords"
     content="therapist San Diego, ISTDP therapy California, psychotherapy San Diego CA, Orthodox Christian counseling, mental health San Diego, therapist near me">
   <title>Jacob Sadan | Therapist in San Diego, CA | Real Therapy for Real Life</title>
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://jacobsadan.com/">
