--- a/media.html
+++ b/media.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
         content="Jacob Sadan media, therapist interview, mental health podcast, San Diego psychology, therapy podcast">
     <title>Media Appearances | Jacob Sadan - Therapist in San Diego, CA</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://jacobsadan.com/media.html">
