--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
         content="contact therapist San Diego, schedule therapy appointment California, Jacob Sadan contact, book therapy session">
     <title>Contact & Schedule | Jacob Sadan - Therapist in San Diego, CA</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://jacobsadan.com/contact.html">
